poke/testsuite/poke.pkl/printf-class-diag-1.pk
/* { dg-do compile } */

printf "%<foo:blahblah"; /* { dg-error "" } */
